# boosty-downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  ruff.toml
.github/: pull_request_template.md  renovate.json
.github/actions/compare-pypi-version/: action.yml
.github/actions/get-poetry-version/: action.yml
.github/workflows/: any-pr-validation.yaml  ci.yaml  pr-validation.yaml  release-pr-validation.yaml  release.yaml
boosty_downloader/: __main__.py  main.py  oauth_setup.py
boosty_downloader/src/application/: filtering.py
boosty_downloader/src/caching/: post_cache.py
boosty_downloader/src/cli/: cli_options.py
boosty_downloader/src/configuration/: config.py
boosty_downloader/src/domain/: post.py  post_data_chunks.py
boosty_downloader/src/download_manager/: download_manager.py  download_manager_config.py  external_videos_downloader.py  ok_video_ranking.py  post_cache.py
boosty_downloader/src/html_reporter/: html_reporter.py
boosty_downloader/src/infrastructure/: file_downloader.py  path_sanitizer.py
boosty_downloader/src/interfaces/: cli_options.py  console_progress_reporter.py  help_panels.py
boosty_downloader/src/loggers/: base.py  failed_downloads_logger.py  logger_instances.py
test/: ABOUT_TESTING.md
test/boosty_downloader/: auth_validation_test.py  empty_post_handling_test.py  inaccessible_post_retry_test.py  oauth_cooldown_test.py  oauth_retry_test.py  oauth_test.py  target_directory_test.py
test/integration/: .env.example  configuration.py  fixtures.py
(+75 files in other folders)
