[project]
name = "boosty-downloader"
version = "0.1.0"
description = ""
authors = [
    { name = "Roman Berezkin", email = "Glitchy-Sheep@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pydantic-settings[yaml] (>=2.7.1,<3.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "yt-dlp (>=2025.1.26,<2026.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "aiohttp-retry (>=2.9.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pyright = "^1.1.394"
pytest = "^8.3.4"


[tool.poetry]
packages = [{ include = "boosty_downloader" }]
